# stacked

./: .gitignore  Cargo.toml  README.md
benches/: sstring.rs  svec.rs
src/: lib.rs  sref.rs  sstring.rs  svec.rs
tests/: svec.rs
