# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "stacked"
version = "0.1.2"
authors = ["Christopher Sebastian <csebastian3@gmail.com>"]
license = "MIT"
repository = "https://github.com/likebike/stacked"
description = """Stack-allocated data structures"""
edition = "2018"

[dependencies]
kerr = "0.1"

[profile.bench]
debug = true

