# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "stacked"
version = "0.1.3"
authors = ["Christopher Sebastian <csebastian3@gmail.com>"]
license = "MIT"
repository = "https://github.com/likebike/stacked"
description = """Stack-allocated data structures.

This was a good learning experience, and these container types work well, but in the end, I was not able to beat the performance of Vec."""
edition = "2018"

[dependencies]
kerr = "0.1"

[profile.bench]
debug = true

